<resources>
    <string name="app_name">Yaw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desktop_mode">桌面模式</string>
    <string name="stop">停止</string>
    <string name="go_forward">前进</string>
    <string name="history">历史记录</string>
    <string name="share">分享网页</string>
    <string name="clear_all_history">清除历史记录</string>
    <string name="download_link_content">下载链接内容</string>
    <string name="placeholder_title">title</string>
    <string name="title">标题</string>
    <string name="system_current_millis">访问时间(Current Time Millis)</string>
    <string name="details">详细信息</string>
    <string name="downloads">下载管理</string>
    <string name="toolbox">网页工具箱</string>
    <string name="settings">设置</string>
    <string name="not_secure">连接不安全</string>
    <string name="cert_info">证书信息</string>
    <string name="web_setting">网站设置</string>
    <string name="search_in_page">网页中查找</string>
    <string name="save_page">保存网页</string>
    <string name="evaluate_javascript">执行Javascript</string>
    <string name="code">源代码</string>
    <string name="qrcode">二维码</string>
    <string name="bookmark">书签</string>
    <string name="eval">执行</string>
    <string name="new_tab">新建标签页</string>
    <string name="dark_mode">网页强制黑暗</string>
    <string name="search_next">下一个</string>
    <string name="search_forward">上一个</string>
    <string name="close">关闭</string>
    <string name="back">返回</string>
    <string name="unseen_mode">新建无痕标签页</string>
    <string name="add_to_bookmark">添加至书签</string>
    <string name="bookmark_history">历史与书签</string>
    <string name="desc">一款 Material You 风格的, 基于 WebView 的浏览器.</string>
    <string name="start">开始</string>
</resources>