<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="?colorSurface"
    android:layout_gravity="center_vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp">
    <EditText
        android:focusable="true"
        android:id="@+id/key_word"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
    <Button
        android:layout_marginHorizontal="5dp"
        android:id="@+id/next"
        android:text="@string/search_next"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/forward"
        android:layout_marginHorizontal="5dp"
        android:text="@string/search_forward"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/close"
        android:layout_marginHorizontal="5dp"
        android:text="@string/close"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>