<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/round_background"
    android:backgroundTint="?colorSurface"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/search"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_search_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/search_in_page"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/save"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/cr_pic"
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_save_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/save_page"
                android:id="@+id/cr_text"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/evalute_js"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_javascript_24"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <TextView
                android:text="@string/evaluate_javascript"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/code"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_code_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/code"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/qrcode"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_qr_code_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/qrcode"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/share"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_share_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/share"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dark_mode"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_nightlight_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/dark_mode"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/back"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/back"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>