<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/round_background"
    android:backgroundTint="?colorSurface"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/go_forward"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/go_forward_pic"
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_arrow_forward_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/go_forward"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cancel_or_refresh"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/cr_pic"
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_close_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/stop"
                android:id="@+id/cr_text"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/pc_mode"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_laptop_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/desktop_mode"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/history_and_bookmarks"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_bookmark_border_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/bookmark_history"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/add_to_bookmark"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/outline_bookmark_add_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/add_to_bookmark"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/down"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_download_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/downloads"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tools"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/round_widgets_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/toolbox"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/settings"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            style="@style/Widget.Material3.CardView.Filled"
            app:cardBackgroundColor="?colorSurface"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                app:tint="?colorPrimary"
                android:layout_marginBottom="10dp"
                android:src="@drawable/baseline_format_list_bulleted_24"
                android:layout_gravity="center"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <TextView
                android:text="@string/settings"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>