<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_vertical|end"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:layout_marginStart="10dp"
            android:textSize="25sp"
            android:gravity="center_vertical"
            android:text="@string/details"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/Widget.Material3.Button"
            android:backgroundTint="@android:color/transparent"
            app:tint="?colorAccent"
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_delete_forever_24"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/Widget.Material3.Button"
            android:backgroundTint="@android:color/transparent"
            app:tint="?colorAccent"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_share_24"/>
    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.card.MaterialCardView
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="50dp"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="100dp"
                android:layout_height="50dp">
                <TextView
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/title"/>
            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:gravity="center_horizontal"
                android:textIsSelectable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="50dp"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="100dp"
                android:layout_height="50dp">
                <TextView
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="URL"/>
            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:gravity="center_horizontal"

                android:textIsSelectable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/url"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="50dp"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="250dp"
                android:layout_height="50dp">
                <TextView
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/system_current_millis"/>
            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:gravity="center_horizontal"
                android:textIsSelectable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/visit_time"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
